--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 Change log
 Newest at the top
 
+03/22/2016 12:06AM: Cleaned up and created new class called Booking()
 03/08/2016 12:58AM: Updated and repaired the timeslot_facet.xml
 03/08/2016 11:30PM: Updated and repaired the course.xml
 03/08/2016 10:20PM: Updated and repaired the days_facet.xml
